<resources>
    <string name="app_name">Ecommerce</string>
    <string name="action_settings">Settings</string>

    <string name="lbl_username">Username</string>
    <string name="lbl_enter_username">Enter Username</string>
    <string name="lbl_pwd">Password</string>
    <string name="lbl_enter_pwd">Enter Password</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_signup">SignUp</string>
    <string name="hello_ecommerce">Ecommerce</string>
    <string name="title_activity_product_list">ProductListActivity</string>
    <string name="lbl_loginSuccess">Welcome to Ecommerce Prototype</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="lbl_addToCart">Add To Cart</string>
    <string name="search_hint">Search Products</string>
    <string name="action_search">Search</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="searchMessage">Search Results</string>
    <string name="title_activity_category_list">CategoryList</string>
    <string name="title_activity_add_products">AddProducts</string>
    <string name="lbl_addProduct">Add Product</string>
    <string name="action_add">Add</string>
    <string name="lbl_productName">Product Name</string>
    <string name="lbl_brand">Brand</string>
    <string name="lbl_manufacturer">Manufacturer</string>
    <string name="lbl_product">Product</string>
    <string name="lbl_quantity">Quantity</string>


</resources>
