<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_add_products"
    tools:context="com.example.devanshus.firstapp.AddProducts">

    <LinearLayout android:id="@+id/product_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"

        android:orientation="horizontal">

        <TextView android:id="@+id/product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_product"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            />

        <AutoCompleteTextView
            android:id="@+id/fld_product"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:paddingLeft="5dp"
            android:textSize="13sp" />

    </LinearLayout>
    <LinearLayout android:id="@+id/productName_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_below="@id/product_block"
        android:orientation="horizontal">



        <TextView android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_productName"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            />
        <EditText
            android:id="@+id/fld_productName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:paddingLeft="5dp"
            android:textSize="13sp"
            android:layout_gravity="center_vertical" />
        />

    </LinearLayout>

    <LinearLayout android:id="@+id/brand_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_below="@id/productName_block"
        android:orientation="horizontal">

        <TextView android:id="@+id/brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_brand"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:id="@+id/fld_brand"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:paddingLeft="5dp"
            android:textSize="13sp" />

    </LinearLayout>
    <LinearLayout android:id="@+id/manufacturer_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_below="@id/brand_block"
        android:orientation="horizontal">

        <TextView android:id="@+id/manufacturer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_manufacturer"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:id="@+id/fld_manufacturer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:paddingLeft="5dp"
            android:textSize="13sp" />

    </LinearLayout>




    <Button
        android:id="@+id/btn_add"
        android:layout_height="wrap_content"
        android:layout_below="@id/manufacturer_block"
        android:text="@string/lbl_addProduct"
        android:layout_width="290dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="13sp"
        android:textStyle="bold"

        />


</RelativeLayout>
